Add project PDF report download
